# agent-analyzer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  deny.toml
.github/workflows/: ci.yml  deny.yml  release.yml
crates/analyzer-cli/: Cargo.toml
crates/analyzer-cli/src/: main.rs
crates/analyzer-cli/src/commands/: collect.rs  git_map.rs  mod.rs  repo_intel.rs  repo_map.rs  sync_check.rs
crates/analyzer-collectors/: Cargo.toml
crates/analyzer-collectors/src/: ci.rs  entry_points.rs  languages.rs  lib.rs  license.rs  readme.rs
crates/analyzer-core/: Cargo.toml
crates/analyzer-core/src/: ai_detect.rs  ai_signatures.json  bot_detect.rs  bug_fix_detect.rs  generated_detect.rs  git.rs  lib.rs  limits.rs  output.rs  secrets.rs  types.rs  walk.rs
crates/analyzer-embed/: Cargo.toml
crates/analyzer-embed/src/: chunk.rs  embedder.rs  lib.rs  main.rs  model.rs  scan.rs  schema.rs  sidecar.rs
crates/analyzer-git-map/: Cargo.toml
crates/analyzer-git-map/src/: aggregator.rs  extractor.rs  incremental.rs  lib.rs  queries.rs
crates/analyzer-graph/: Cargo.toml
crates/analyzer-graph/src/: centrality.rs  cochange.rs  lib.rs  louvain.rs  probe_test.rs.txt  queries.rs  slop.rs  slop_nlp.rs  slop_targets.rs
crates/analyzer-repo-map/: Cargo.toml
crates/analyzer-repo-map/src/: complexity.rs  conventions.rs  extractor.rs  find.rs  lib.rs  parser.rs  queries.rs
crates/analyzer-sync-check/: Cargo.toml
crates/analyzer-sync-check/src/: checker.rs  lib.rs  matcher.rs  parser.rs  queries.rs
src/: lib.rs
