[package]
name = "agent-analyzer-workspace-tests"
version = "0.0.0"
edition = "2024"
publish = false
license.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/analyzer-core",
    "crates/analyzer-git-map",
    "crates/analyzer-repo-map",
    "crates/analyzer-collectors",
    "crates/analyzer-sync-check",
    "crates/analyzer-graph",
    "crates/analyzer-embed",
    "crates/analyzer-cli",
]

[workspace.package]
version = "0.8.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Avi Fenesh <avifenesh@gmail.com>"]
repository = "https://github.com/agent-sh/agent-analyzer"
homepage = "https://github.com/agent-sh/agent-analyzer"
keywords = ["git", "analysis", "code-review", "repository", "ai-detection"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
# Internal crates
analyzer-core = { path = "crates/analyzer-core" }
analyzer-git-map = { path = "crates/analyzer-git-map" }
analyzer-repo-map = { path = "crates/analyzer-repo-map" }
analyzer-collectors = { path = "crates/analyzer-collectors" }
analyzer-sync-check = { path = "crates/analyzer-sync-check" }
analyzer-graph = { path = "crates/analyzer-graph" }
analyzer-embed = { path = "crates/analyzer-embed" }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# Git
git2 = { version = "0.20", features = ["vendored-openssl"] }

# File handling
walkdir = "2"
ignore = "0.4"
glob = "0.3"
regex = "1"

# Parallelism
rayon = "1.10"

# Graph algorithms (analyzer-graph)
petgraph = "0.6"

# AST parsing (Phase 2)
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

# Markdown parsing (Phase 4)
pulldown-cmark = "0.12"

# Manifest parsing (entry-points query)
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"
