[package]
name = "analyzer-cli"
description = "Unified CLI binary for agent-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "agent-analyzer"
path = "src/main.rs"

[dependencies]
analyzer-core.workspace = true
analyzer-git-map.workspace = true
analyzer-repo-map.workspace = true
analyzer-collectors.workspace = true
analyzer-sync-check.workspace = true
analyzer-graph.workspace = true
analyzer-embed.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
