[package]
name = "analyzer-embed"
description = "Local embedding generation for agent-analyzer (semantic slop detection, find, stylometry)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "agent-analyzer-embed"
path = "src/main.rs"

[lib]
name = "analyzer_embed"
path = "src/lib.rs"

[dependencies]
analyzer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
walkdir.workspace = true
ignore.workspace = true
rayon.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
sha2 = "0.10"
half = "2"
streaming-iterator = "0.1"
fastembed = "5"

[dev-dependencies]
tempfile = "3"
