[package]
name = "analyzer-git-map"
description = "Git history extraction, aggregation, and query layer for agent-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
analyzer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
git2.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
