[package]
name = "analyzer-graph"
description = "Graph-derived analytics (co-change communities, centrality, expertise) for agent-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
analyzer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
petgraph = "0.6"
rayon.workspace = true

[dev-dependencies]
serde_json.workspace = true
