[package]
name = "analyzer-graph"
description = "Graph-derived analytics (co-change communities, centrality, expertise) for agent-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
analyzer-core.workspace = true
analyzer-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
petgraph.workspace = true
rayon.workspace = true
ignore.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
streaming-iterator = "0.1"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
