[package]
name = "analyzer-repo-map"
description = "AST-based symbol mapping for agent-analyzer (Phase 2 stub)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
analyzer-core.workspace = true
