[package]
name = "analyzer-repo-map"
description = "AST-based symbol mapping for agent-analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
analyzer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
rayon.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true

[dev-dependencies]
tempfile = "3"
