[package]
name = "analyzer-sync-check"
description = "Doc-code sync analysis for agent-analyzer (Phase 4 stub)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
analyzer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
walkdir.workspace = true
regex.workspace = true
pulldown-cmark.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
